--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>XBMC Remote Test...</title>
+    <title>XBMCFrontend</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -28,7 +27,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="#!/movies/">Movies</a></li>
-            <li><a href="#!/tv/">TV</a></li>
+            <li><a href="#!/tvshows/">TV</a></li>
             <li><a href="#about">Music (NYI)</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -36,7 +35,21 @@
     </div>
 
     <div class="container">
-			<div id="library"><h1>Loading library...</h1></div>
+			<div id="loading">
+				<h1>Loading library...</h1>
+				<div id="floatingCirclesG">
+					<div class="f_circleG" id="frotateG_01"></div>
+					<div class="f_circleG" id="frotateG_02"></div>
+					<div class="f_circleG" id="frotateG_03"></div>
+					<div class="f_circleG" id="frotateG_04"></div>
+					<div class="f_circleG" id="frotateG_05"></div>
+					<div class="f_circleG" id="frotateG_06"></div>
+					<div class="f_circleG" id="frotateG_07"></div>
+					<div class="f_circleG" id="frotateG_08"></div>
+				</div>
+			</div>
+			<div id="library">
+			</div>
 			<div class="modal fade" id="detailModal" tabindex="-1" role="dialog" aria-labelledby="Details for selected media" aria-hidden="true">
 			  <div class="modal-dialog">
 			    <div class="modal-content">
