prepared switch to 'internal' jquery

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					  <span class="glyphicon glyphicon-fast-forward"></span>
 					</button>
 				</div>
-				<!--<div class="btn-group navbar-btn">
+				<div class="btn-group navbar-btn">
 					<button type="button" class="btn btn-default">
 					  <span class="glyphicon glyphicon-home"></span>
 					</button>
@@ -128,14 +128,14 @@
 					<button type="button" class="btn btn-default">
 					  <span class="glyphicon glyphicon-fullscreen"></span>
 					</button>
-				</div>-->
+				</div>
 			</div>
 			<div class="container">
 				<span id="nowplaying">Now Playing: %FOO%</span>
 			</div>
 		</nav>
 
-    <script src="https://code.jquery.com/jquery.js"></script>
+		<script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
 		<script src="js/jquery.loadTemplate.min.js"></script>
 		<script src="js/jquery.hashchange.min.js"></script> <!-- Note: It would be much cooler to use the History API but no idea how to achieve this without the ability to RedirectMatch... -->
