still playin with stuff...

--- a/index.html
+++ b/index.html
@@ -135,10 +135,11 @@
 			</div>
 		</nav>
 
-		<script src="js/jquery.js"></script>
+		<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/handlebars-v1.1.2.js"></script>
+    <script src="js/jquery.handlebars.min.js"></script>
 		<script src="js/jquery.loadTemplate.min.js"></script>
-		<script src="js/jquery.hashchange.min.js"></script> <!-- Note: It would be much cooler to use the History API but no idea how to achieve this without the ability to RedirectMatch... -->
     <script src="js/jquery.jsonrpc.js"></script>
 	  <script src="js/frnt.js"></script>
   </body>
