--- a/index.html
+++ b/index.html
@@ -91,17 +91,18 @@
 						  <span class="glyphicon glyphicon-fast-forward"></span>
 						</button>
 						<div class="group-element">
-							<div class="progress active" style="width: 200px;">
+							<div id="seekbar"></div>
+							<!--<div class="progress active" style="width: 200px;">
 								<div id="seekbar" class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
 									<span class="sr-only">40% complete</span>
 								</div>
-							</div>
+							</div>-->
 						</div>
 						<div class="group-element time-info">
 							<span id="time">00:00</span> / <span id="totaltime">&infin;</span>
 						</div>
 						<div class="group-element" style="width: 150px;">
-							<div id="volumebar" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="0"></div>
+							<div id="volumebar"></div>
 							<!--<div class="progress active" style="width: 100px;">
 								<div id="volumebar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
 									<span class="sr-only">40% complete</span>
