--- a/index.html
+++ b/index.html
@@ -70,8 +70,10 @@
 				
 		<nav class="navbar navbar-default navbar-fixed-bottom " role="navigation">
 			<div class="container">
-				<div class="row well">
-					<div class="btn-group navbar-btn btn-group-player" id="controls">
+				<div class="row">
+					<div class="col-md-6 well">
+						<div id="nowplaying"></div>
+						<div class="btn-group navbar-btn btn-group-player" id="controls">
 						<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
 						  <span class="glyphicon glyphicon-fast-backward"></span>
 						</button>
@@ -110,63 +112,45 @@
 							</div>-->
 						</div>
 					</div>
+					</div>
+					<div class="col-md-6-well">
+						<div class="btn-group-square">
+							<div class="btn-group navbar-btn">
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-home"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-arrow-up"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-fullscreen"></span>
+								</button>
+							</div>
+							<div class="btn-group navbar-btn">
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-arrow-left"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-ok"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-arrow-right"></span>
+								</button>
+							</div>
+							<div class="btn-group navbar-btn">
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-info-sign"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-arrow-down"></span>
+								</button>
+								<button type="button" class="btn btn-default">
+								  <span class="glyphicon glyphicon-list"></span>
+								</button>
+							</div>
+						</div>
+					</div>
 				</div>
-			</div>
-			<div class="container">
-				<div class="btn-group navbar-btn" id="controls">
-					<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
-					  <span class="glyphicon glyphicon-fast-backward"></span>
-					</button>
-					<button data-toggle="tooltip" title="Rewind" type="button" class="btn btn-default" id="control-backward">
-					  <span class="glyphicon glyphicon-backward"></span>
-					</button>
-					<button data-toggle="tooltip" title="Start or pause playback" data-type="button" class="btn btn-default" id="control-playpause">
-					  <span class="glyphicon glyphicon-play"></span>
-					</button>
-					<button data-toggle="tooltip" title="Stop playback" type="button" class="btn btn-default" id="control-stop">
-					  <span class="glyphicon glyphicon-stop"></span>
-					</button>
-					<button data-toggle="tooltip" title="Increase playback speed" type="button" class="btn btn-default" id="control-forward">
-					  <span class="glyphicon glyphicon-forward"></span>
-					</button>
-					<button data-toggle="tooltip" title="Jump to next item in playlist" type="button" class="btn btn-default" id="control-next">
-					  <span class="glyphicon glyphicon-fast-forward"></span>
-					</button>
-				</div>
-				<div class="btn-group navbar-btn">
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-home"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-arrow-up"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-arrow-left"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-ok"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-arrow-right"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-arrow-down"></span>
-					</button>
-				</div>
-				<div class="btn-group navbar-btn">
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-info-sign"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-list"></span>
-					</button>
-					<button type="button" class="btn btn-default">
-					  <span class="glyphicon glyphicon-fullscreen"></span>
-					</button>
-				</div>
-			</div>
-			<div class="container">
-				<span id="nowplaying">Now Playing: %FOO%</span>
 			</div>
 		</nav>
 
