--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@
 
 		<script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery.unveil.js"></script>
 		<script src="js/bootstrap-slider.js"></script>
     <script src="js/moment-with-langs.min.js"></script>
     <script src="js/handlebars-v1.1.2.js"></script>
