--- a/index.html
+++ b/index.html
@@ -74,77 +74,80 @@
 					<div class="col-md-6 well">
 						<div id="nowplaying"></div>
 						<div class="btn-group navbar-btn btn-group-player" id="controls">
-						<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
-						  <span class="glyphicon glyphicon-fast-backward"></span>
-						</button>
-						<button data-toggle="tooltip" title="Rewind" type="button" class="btn btn-default" id="control-backward">
-						  <span class="glyphicon glyphicon-backward"></span>
-						</button>
-						<button data-toggle="tooltip" title="Start or pause playback" data-type="button" class="btn btn-default" id="control-playpause">
-						  <span class="glyphicon glyphicon-play"></span>
-						</button>
-						<button data-toggle="tooltip" title="Stop playback" type="button" class="btn btn-default" id="control-stop">
-						  <span class="glyphicon glyphicon-stop"></span>
-						</button>
-						<button data-toggle="tooltip" title="Increase playback speed" type="button" class="btn btn-default" id="control-forward">
-						  <span class="glyphicon glyphicon-forward"></span>
-						</button>
-						<button data-toggle="tooltip" title="Jump to next item in playlist" type="button" class="btn btn-default" id="control-next">
-						  <span class="glyphicon glyphicon-fast-forward"></span>
-						</button>
-						<div class="group-element">
-							<div id="seekbar"></div>
-							<!--<div class="progress active" style="width: 200px;">
-								<div id="seekbar" class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
-									<span class="sr-only">40% complete</span>
-								</div>
-							</div>-->
+							<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
+							  <span class="glyphicon glyphicon-fast-backward"></span>
+							</button>
+							<button data-toggle="tooltip" title="Rewind" type="button" class="btn btn-default" id="control-backward">
+							  <span class="glyphicon glyphicon-backward"></span>
+							</button>
+							<button data-toggle="tooltip" title="Start or pause playback" data-type="button" class="btn btn-default" id="control-playpause">
+							  <span class="glyphicon glyphicon-play"></span>
+							</button>
+							<button data-toggle="tooltip" title="Stop playback" type="button" class="btn btn-default" id="control-stop">
+							  <span class="glyphicon glyphicon-stop"></span>
+							</button>
+							<button data-toggle="tooltip" title="Increase playback speed" type="button" class="btn btn-default" id="control-forward">
+							  <span class="glyphicon glyphicon-forward"></span>
+							</button>
+							<button data-toggle="tooltip" title="Jump to next item in playlist" type="button" class="btn btn-default" id="control-next">
+							  <span class="glyphicon glyphicon-fast-forward"></span>
+							</button>
+							<div class="group-element">
+								<div id="seekbar"></div>
+								<!--<div class="progress active" style="width: 200px;">
+									<div id="seekbar" class="progress-bar" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+										<span class="sr-only">40% complete</span>
+									</div>
+								</div>-->
+							</div>
+							<div class="group-element time-info">
+								<span id="time">00:00</span> / <span id="totaltime">&infin;</span>
+							</div>
+							<div class="group-element" style="width: 150px;">
+								<div id="volumebar"></div>
+								<!--<div class="progress active" style="width: 100px;">
+									<div id="volumebar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+										<span class="sr-only">40% complete</span>
+									</div>
+								</div>-->
+							</div>
+							<button data-toggle="tooltip" title="Mute/Unmute" type="button" class="btn btn-default" id="control-next">
+							  <span class="glyphicon glyphicon-volume-off"></span>
+							</button>
 						</div>
-						<div class="group-element time-info">
-							<span id="time">00:00</span> / <span id="totaltime">&infin;</span>
-						</div>
-						<div class="group-element" style="width: 150px;">
-							<div id="volumebar"></div>
-							<!--<div class="progress active" style="width: 100px;">
-								<div id="volumebar" class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
-									<span class="sr-only">40% complete</span>
-								</div>
-							</div>-->
-						</div>
-					</div>
 					</div>
 					<div class="col-md-6-well">
 						<div class="btn-group-square">
 							<div class="btn-group navbar-btn">
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-home">
 								  <span class="glyphicon glyphicon-home"></span>
 								</button>
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-up">
 								  <span class="glyphicon glyphicon-arrow-up"></span>
 								</button>
-								<button type="button" class="btn btn-default">
-								  <span class="glyphicon glyphicon-fullscreen"></span>
+								<button type="button" class="btn btn-default" id="control-back">
+								  <span class="glyphicon glyphicon-circle-arrow-left"></span>
 								</button>
 							</div>
 							<div class="btn-group navbar-btn">
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-left">
 								  <span class="glyphicon glyphicon-arrow-left"></span>
 								</button>
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-select">
 								  <span class="glyphicon glyphicon-ok"></span>
 								</button>
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-right">
 								  <span class="glyphicon glyphicon-arrow-right"></span>
 								</button>
 							</div>
 							<div class="btn-group navbar-btn">
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-info">
 								  <span class="glyphicon glyphicon-info-sign"></span>
 								</button>
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-down">
 								  <span class="glyphicon glyphicon-arrow-down"></span>
 								</button>
-								<button type="button" class="btn btn-default">
+								<button type="button" class="btn btn-default" id="control-playlist">
 								  <span class="glyphicon glyphicon-list"></span>
 								</button>
 							</div>
