--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 			      <div class="modal-body" id="detailContent"></div>
 			      <div class="modal-footer">
 			        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-			        <button type="button" class="btn btn-primary">Save changes</button>
+			        <button type="button" class="btn btn-default"><span class="glyphicon glyphicon-list"></span> Queue</button>
+			        <button type="button" class="btn btn-success"><span class="glyphicon glyphicon-play"></span> Play</button>
 			      </div>
 			    </div><!-- /.modal-content -->
 			  </div><!-- /.modal-dialog -->
@@ -148,7 +149,7 @@
 								  <span class="glyphicon glyphicon-arrow-down"></span>
 								</button>
 								<button type="button" class="btn btn-default" id="control-playlist">
-								  <span class="glyphicon glyphicon-list"></span>
+								  <span class="glyphicon glyphicon-list"></span> 
 								</button>
 							</div>
 						</div>
