made (un)mute work

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 									</div>
 								</div>-->
 							</div>
-							<button data-toggle="tooltip" title="Mute/Unmute" type="button" class="btn btn-default" id="control-next">
+							<button data-toggle="tooltip" title="Mute/Unmute" type="button" class="btn btn-default" id="control-mute">
 							  <span class="glyphicon glyphicon-volume-off"></span>
 							</button>
 						</div>
