small layout adjustment for player-controls

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		<nav class="navbar navbar-default navbar-fixed-bottom " role="navigation">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-8 well">
+					<div class="col-md-9 well">
 						<div id="nowplaying"></div>
 						<div class="btn-group navbar-btn btn-group-player" id="controls">
 							<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
@@ -127,7 +127,7 @@
 							</button>
 						</div>
 					</div>
-					<div class="col-md-6-well">
+					<div class="col-md-3">
 						<div class="btn-group-square">
 							<div class="btn-group navbar-btn">
 								<button type="button" class="btn btn-default" id="control-home">
