--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li class="active"><a href="#!/movies/">Movies</a></li>
             <li><a href="#!/tvshows/">TV</a></li>
             <li><a href="#about">Music (NYI)</a></li>
+						<li><a href="#application">Application</a></li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
