--- a/index.html
+++ b/index.html
@@ -27,8 +27,27 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#!/movies/">Movies</a></li>
-            <li><a href="#!/tvshows/">TV</a></li>
+            <li class="active" class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Movies <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#!/movies/">Titles</a></li>
+								<li><a href="#">Movie Sets</a></li>
+								<li><a href="#">Recently added</a></li>
+								<li><a href="#">Genres</a></li>
+								<li><a href="#">Years</a></li>
+								<li><a href="#">Tags</a></li>
+							</ul>
+						</li>
+            <li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">TV <b class="caret"></b></a>
+							<ul class="dropdown-menu">
+								<li><a href="#!/tvshows/">Titles</a></li>
+								<li><a href="#">Recently added</a></li>
+								<li><a href="#">Genres</a></li>
+								<li><a href="#">Years</a></li>
+								<li><a href="#">Tags</a></li>
+							</ul>
+						</li>
             <li><a href="#about">Music (NYI)</a></li>
 						<li><a href="#application">Application</a></li>
           </ul>
@@ -88,8 +107,8 @@
 		<nav class="navbar navbar-default navbar-fixed-bottom " role="navigation">
 			<div class="container">
 				<div class="row">
-					<div class="col-md-9 well">
-						<div id="nowplaying"></div>
+					<div class="control col-md-9 well">
+						<div id="nowplaying">Nothing playing</div>
 						<div class="btn-group navbar-btn btn-group-player" id="controls">
 							<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
 							  <span class="glyphicon glyphicon-fast-backward"></span>
