--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active" class="dropdown">
+            <li class="active dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Movies <b class="caret"></b></a>
 							<ul class="dropdown-menu">
 								<li><a href="#!/movies/">Titles</a></li>
@@ -49,7 +49,13 @@
 							</ul>
 						</li>
             <li><a href="#about">Music (NYI)</a></li>
-						<li><a href="#application">Application</a></li>
+						<li class="dropdown">
+							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Application <b class="caret"></b></a>
+							<ul class="dropdown-menu" id="device-capabilities">
+								<li role="presentation" class="divider"></li>
+								<li><a href='#!/about/'>About</a></li>
+							</ul>
+						</li>
           </ul>
         </div><!--/.nav-collapse -->
       </div>
