--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 		<nav class="navbar navbar-default navbar-fixed-bottom " role="navigation">
 			<div class="container">
 				<div class="row">
-					<div class="control col-md-9 well">
+					<div class="col-md-9" id="control-container">
 						<div id="nowplaying">Nothing playing</div>
 						<div class="btn-group navbar-btn btn-group-player" id="controls">
 							<button data-toggle="tooltip" title="Jump to beginning or previous item in playlist" type="button" class="btn btn-default" id="control-prev">
