--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
 								<li><a href="#">Genres</a></li>
 								<li><a href="#">Years</a></li>
 								<li><a href="#">Tags</a></li>
+								<li role="presentation" class="divider"></li>
+								<li role="presentation" class="dropdown-header">Library management</li>
+								<li><a href='#'>Refresh Video Library</a></li>
+								<li><a href="#">Clean Video Library</a></li>
 							</ul>
 						</li>
             <li class="dropdown">
@@ -46,6 +50,10 @@
 								<li><a href="#">Genres</a></li>
 								<li><a href="#">Years</a></li>
 								<li><a href="#">Tags</a></li>
+								<li role="presentation" class="divider"></li>
+								<li role="presentation" class="dropdown-header">Library management</li>
+								<li><a href='#'>Refresh Video Library</a></li>
+								<li><a href="#">Clean Video Library</a></li>
 							</ul>
 						</li>
             <li><a href="#about">Music (NYI)</a></li>
@@ -53,7 +61,7 @@
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Application <b class="caret"></b></a>
 							<ul class="dropdown-menu" id="device-capabilities">
 								<li role="presentation" class="divider"></li>
-								<li><a href='#!/about/'>About</a></li>
+								<li><a href='#!/settings/'>Settings</a></li>
 							</ul>
 						</li>
           </ul>
