--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 								<li><a href="#">Clean Video Library</a></li>
 							</ul>
 						</li>
-            <li><a href="#about">Music (NYI)</a></li>
+            <!--<li><a href="#!/music/">Music (NYI)</a></li>-->
 						<li class="dropdown">
 							<a href="#" class="dropdown-toggle" data-toggle="dropdown">Application <b class="caret"></b></a>
 							<ul class="dropdown-menu" id="device-capabilities">
