--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 								<li><a href="#">Years</a></li>
 								<li><a href="#">Tags</a></li>
 								<li role="presentation" class="divider"></li>
+								<li><a href="#!/files/">Files</a></li>
+								<li><a href="#">Playlists</a></li>
+								<li role="presentation" class="divider"></li>
 								<li role="presentation" class="dropdown-header">Library management</li>
 								<li><a href='#'>Refresh Video Library</a></li>
 								<li><a href="#">Clean Video Library</a></li>
@@ -50,6 +53,9 @@
 								<li><a href="#">Genres</a></li>
 								<li><a href="#">Years</a></li>
 								<li><a href="#">Tags</a></li>
+								<li role="presentation" class="divider"></li>
+								<li><a href="#!/files/">Files</a></li>
+								<li><a href="#">Playlists</a></li>
 								<li role="presentation" class="divider"></li>
 								<li role="presentation" class="dropdown-header">Library management</li>
 								<li><a href='#'>Refresh Video Library</a></li>
