Test for Websockets...

--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
     <script src="js/moment-with-langs.min.js"></script>
     <script src="js/handlebars-v1.1.2.js"></script>
     <script src="js/jquery.handlebars.min.js"></script>
-    <script src="js/jquery.jsonrpc.js"></script>
+    <script src="js/jquery.jsonrpcclient.js"></script>
 	  <script src="js/frnt.js"></script>
   </body>
 </html>
