--- a/index.html
+++ b/index.html
@@ -215,6 +215,7 @@
     <script src="js/moment-with-langs.min.js"></script>
     <script src="js/handlebars-v1.1.2.js"></script>
     <script src="js/jquery.handlebars.min.js"></script>
+    <script src="js/jquery.json-2.4.min.js"></script>
     <script src="js/jquery.jsonrpcclient.js"></script>
 	  <script src="js/frnt.js"></script>
   </body>
